# MusiMind

./: .gitignore  README.md  build.gradle.kts  gradle.properties  gradlew  keytool_out.txt  settings.gradle.kts
.agent/workflows/: games-plan.md  musimind-improvement-plan.md
app/: build.gradle.kts  proguard-rules.pro
app/src/main/: AndroidManifest.xml
app/src/main/assets/fonts/: bravura_metadata.json  glyphnames.json
app/src/main/assets/scores/: c_major_scale.json  interval_exercise_1.json  rhythm_exercise_1.json  solfege_exercise_1.json
app/src/main/assets/soundfonts/: Metronom.sf2
app/src/main/cpp/: CMakeLists.txt  OboePlayer.cpp  OboePlayer.h  SoundFontEngine.cpp  SoundFontEngine.h  native-audio.cpp
app/src/main/java/com/musimind/: MainActivity.kt  MusiMindApp.kt
app/src/main/java/com/musimind/di/: AppModule.kt  AudioModule.kt  FirebaseModule.kt  GamesModule.kt  GamificationModule.kt  LocaleModule.kt  SupabaseModule.kt
app/src/main/java/com/musimind/music/: MidiEngine.kt
app/src/main/res/drawable/: ic_launcher_background.xml  ic_launcher_foreground.xml  ic_notification.xml
app/src/main/res/values/: colors.xml  strings.xml  themes.xml
app/src/main/res/values-de/: strings.xml
app/src/main/res/values-en/: strings.xml
app/src/main/res/values-es/: strings.xml
app/src/main/res/values-fr/: strings.xml
app/src/main/res/values-night/: themes.xml
app/src/main/res/values-zh-rCN/: strings.xml
app/src/main/res/xml/: file_paths.xml  locales_config.xml
gradle/: libs.versions.toml
sql/: melodic_perception_exercises.sql
(+173 files in other folders)
